bk_ida/gccida/c3/delete_related_insns
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2188:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2188:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2204:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)insn[1]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2230:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)insn[4]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2235:29: error: expected ')'
delete_related_insns( ( rtx)v5); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2235:21: note: to match this '('
delete_related_insns( ( rtx)v5); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2243:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( ( rtx)v5); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2243:41: error: expected ')'
nonnote_insn = next_nonnote_insn( ( rtx)v5); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2243:33: note: to match this '('
nonnote_insn = next_nonnote_insn( ( rtx)v5); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2244:33: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( **( _DWORD **)&nonnote_insn[2] & 0xFFFE) == 44 ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2244:6: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( **( _DWORD **)&nonnote_insn[2] & 0xFFFE) == 44 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2244:72: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( **( _DWORD **)&nonnote_insn[2] & 0xFFFE) == 44 ) 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2245:23: error: use of undeclared identifier 'nonnote_insn'
delete_related_insns( nonnote_insn); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2251:30: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v15.rtwint = ( __int64)insn[3].fld[0]; v15.rtwint; v15.rtwint = *( __int64 *)( v15.rtwint + 16) ) 
                             ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2257:29: error: expected ')'
delete_related_insns( ( rtx)v16); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2257:21: note: to match this '('
delete_related_insns( ( rtx)v16); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2279:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v18.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2323:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( _DWORD *)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2336:29: error: expected ')'
delete_related_insns( ( rtx)v13); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/jump.c:2336:21: note: to match this '('
delete_related_insns( ( rtx)v13); 
                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_related_insns/src/obj/jump.o] Error 1
